[package]
name = "health_check_nvim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
nvim-oxi = {version="0.2.2", features=["neovim-nightly"]}
reqwest = {version="0.11.14", features=["blocking"]}
serde = "1.0.152"
url = "2.3.1"
# nvim-oxi = {version="0.2.2", features=["neovim-0.8"]}
